k8s/8/second/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
      what: backend
  template:
    metadata:
      name: hello-backend
      labels:
        app: hello
        what: backend
    spec:
      containers:
      - name: backend
        image: pn2d/hello-backend:v3
        ports:
        - name: http
          containerPort: 80
        readinessProbe:
          httpGet:
            path: /ready
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: hello-backend
spec:
  selector:
    app: hello
    what: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
