k8s/8/second/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-web-service
spec:
  type: NodePort
  selector:
    app: hello
    what: frontend
  ports:
  - protocol: TCP
    port: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: my-static-address
spec:
  tls:
  - secretName: hello-zbozi-fail-tls
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: hello-web-service
          servicePort: 80
